admin login design

--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -19,7 +19,7 @@
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="hero-actions aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-            <a href="portfolio.html" class="btn btn-outline-light">Login</a>
+            <a href="/login" class="btn btn-outline-light">Login</a>
         </div>
 
     </div>
