--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -14,8 +14,8 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="hero-content">
               <h1 data-aos="fade-up" data-aos-delay="200">Hello, I'm <span class="highlight">Tanveer Ahmad</span></h1>
-              <h2 data-aos="fade-up" data-aos-delay="300">Creative <span class="typed" data-typed-items="Graphic Designer"></span></h2>
-              <p data-aos="fade-up" data-aos-delay="400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <h2 data-aos="fade-up" data-aos-delay="1000">Creative <span class="typed" data-typed-items="Personalized Gift Creator, Graphic Designer"></span></h2>
+              <p data-aos="fade-up" data-aos-delay="400">A Personalized Gift Designer and Creative Graphic Designer who crafts unique, custom-made gifts and visually compelling designs, tailored to individual preferences, occasions and branding needs, blending creativity with high-quality craftsmanship.</p>
               <div class="hero-actions" data-aos="fade-up" data-aos-delay="500">
                 <a href="portfolio.html" class="btn btn-primary">View My Work</a>
                 <a href="/contact" class="btn btn-outline">Get In Touch</a>
@@ -38,8 +38,8 @@
                     <span>Design</span>
                   </div>
                   <div class="floating-card code" data-aos="fade-right" data-aos-delay="800">
-                    <i class="bi bi-code-slash"></i>
-                    <span>Code</span>
+                    <i class="bi bi-gift"></i>
+                    <span>Gift</span>
                   </div>
                   <div class="floating-card creativity" data-aos="fade-up" data-aos-delay="900">
                     <i class="bi bi-lightbulb"></i>
