--- a/templates/public/services.html
+++ b/templates/public/services.html
@@ -10,7 +10,12 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
+        <h2>
+          Services 
+          <!-- {% if request.user.is_autenticated %} -->
+            <i class="bi bi-add"></i>
+          <!-- {% endif %} -->
+        </h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
       </div><!-- End Section Title -->
 
