add services utility

--- a/templates/public/login.html
+++ b/templates/public/login.html
@@ -1,53 +1,54 @@
 {% extends "public/base.html" %}
-  
-  {% block content %}
-    <main class="main">
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
+{% block content %}
+<main class="main">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Admin Login</h2>
-      </div><!-- End Section Title -->
-      
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <!-- Contact Section -->
+  <section id="contact" class="contact section">
 
-        <div class="row g-4 g-lg-6 d-flex justify-content-center">
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+      <h2>Admin Login</h2>
+    </div><!-- End Section Title -->
 
-          <div class="col-lg-7">
-            <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-              <form method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-                <div class="row gy-4">
+      <div class="row g-4 g-lg-6 d-flex justify-content-center">
 
-                  <div class="col-12">
-                    <p>Email</p>
-                    <input type="email" name="email" class="form-control" placeholder="Email" required>
-                  </div>
+        <div class="col-lg-7">
+          <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
 
-                  <div class="col-12 ">
-                    <p>Password</p>
-                    <input type="password" class="form-control" name="password" placeholder="password" required>
-                  </div>
-
-                  <div class="col-12 text-center">
-                    <button type="submit" class="btn btn-outline-light">Login</button>
-                  </div>
-
+            <form method="post" action="{% url 'login_user' %}" class="php-email-form" data-aos="fade-up"
+              data-aos-delay="200">
+              <div class="row gy-4">
+                {% csrf_token %}
+                <div class="col-12">
+                  <p>Email</p>
+                  <input type="email" name="email" class="form-control" placeholder="Email" required>
                 </div>
-              </form>
 
-            </div>
+                <div class="col-12 ">
+                  <p>Password</p>
+                  <input type="password" class="form-control" name="password" placeholder="password" required>
+                </div>
+
+                <div class="col-12 text-center">
+                  <button type="submit" class="btn btn-outline-light">Login</button>
+                </div>
+
+              </div>
+            </form>
+
           </div>
-
         </div>
 
       </div>
-    </section>
+
+    </div>
+  </section>
 
 
 
 
-    </main>
-    {% endblock %}
+</main>
+{% endblock %}
