--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -17,7 +17,11 @@
             <a href="https://www.instagram.com/_gift_wala_?igsh=MmhsczI2aHcydHpv" class="instagram"><i class="bi bi-instagram"></i></a>
         </div>
         <div class="hero-actions aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-            <a href="/login" class="btn btn-outline-light">Login</a>
+            {% if user.is_authenticated %}
+                <a href="/logout_user" class="btn btn-outline-light">Logout</a>
+            {% else %}
+                <a href="/login" class="btn btn-outline-light">Login</a>
+            {% endif %}
         </div>
 
     </div>
