--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -47,7 +47,6 @@
 
   <!-- Vendor JS Files -->
   <script src="static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="static/assets/vendor/php-email-form/validate.js"></script>
   <script src="static/assets/vendor/aos/aos.js"></script>
   <script src="static/assets/vendor/typed.js/typed.umd.js"></script>
   <script src="static/assets/vendor/waypoints/noframework.waypoints.js"></script>
@@ -59,7 +58,10 @@
 
   <!-- Main JS File -->
   <script src="static/assets/js/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 </body>
+
+{% block customjs %}{% endblock %}
 
 </html>
