--- a/templates/public/gallery.html
+++ b/templates/public/gallery.html
@@ -10,22 +10,40 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <h2>Gallery
+
+          {% if user.is_authenticated %}
+          <div style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#addcategorymodal">
+            <i class="bi bi-plus-circle add_category"></i>
+          </div>
+          {% endif %}
+        </h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-strategy">Strategy</li>
-            <li data-filter=".filter-finance">Finance</li>
-            <li data-filter=".filter-operations">Operations</li>
-            <li data-filter=".filter-technology">Technology</li>
-          </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
+
+            {% for category in all_categories %}
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="{{category.img_path}}" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>{{category.name}}</h4>
+                  <p>{{category.description}}</p>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
@@ -156,6 +174,57 @@
       </div>
 
     </section><!-- /Portfolio Section -->
-
+    {% include 'components/modals/add_category_modal.html' %}
   </main>
+{% endblock %}
+
+{% block customjs %}
+  <script>
+    function getCookie(name) {
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+          const cookie = cookies[i].trim();
+          // Does this cookie string begin with the name we want?
+          if (cookie.substring(0, name.length + 1) === (name + '=')) {
+            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            break;
+          }
+        }
+      }
+      return cookieValue;
+    }
+
+    $(document).ready(function () {
+    const csrftoken = getCookie('csrftoken');
+    $(".savecategory").click(function () {
+      var data = {
+        name: $("#category-title").val(),
+        description: $("#category-description").val(),
+        img_path: $("#category-icon").val(),
+        id : $("#category-id").val()
+      };
+
+      $.ajax({
+        url: "add_update_category",  // your API endpoint
+        type: "POST",
+        data: JSON.stringify(data),
+        contentType: "application/json",
+        headers: { "X-CSRFToken": csrftoken },
+        success: function (response) {
+          if (response.status) {
+            alert(response.message);
+            location.reload();
+          } else {
+            alert("Error: " + response.message);
+          }
+        },
+        error: function (xhr, status, error) {
+          alert("AJAX error: " + error);
+        }
+      });
+    });
+  });
+  </script>
 {% endblock %}
