footer and nav - link fix

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,21 +1,20 @@
 <footer id="footer" class="footer">
 
     <div class="container">
-      <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
-      </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+
+        <a href="https://www.facebook.com/share/1EnAS8Qy6H/" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/_gift_wala_?igsh=MmhsczI2aHcydHpv" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://wa.me/message/BRBIXLL7WTS6D1"  target="_blank"><i class="bi bi-whatsapp"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <h6 class="d-none">
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </h6>
       </div>
     </div>
 
