--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -13,8 +13,9 @@
         </nav>
 
         <div class="header-social-links">
-            <a href="https://www.facebook.com/share/1EnAS8Qy6H/" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="https://www.instagram.com/_gift_wala_?igsh=MmhsczI2aHcydHpv" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/share/1EnAS8Qy6H/"  target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/_gift_wala_?igsh=MmhsczI2aHcydHpv"  target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://wa.me/message/BRBIXLL7WTS6D1"  target="_blank"><i class="bi bi-whatsapp"></i></a>
         </div>
         <div class="hero-actions aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
             {% if user.is_authenticated %}
