--- a/templates/public/category-details.html
+++ b/templates/public/category-details.html
@@ -65,7 +65,7 @@
                 {% for item in gallery_items %}
                 <div class="col-4">
                   <img src="{{item.image_url}}" alt="{{item.description}}"
-                    class="img-fluid glightbox" style="max-height: 285px; max-width: 430px;">
+                    class="img-fluid glightbox" style="height: 285px; width: 430px;">
                 </div>
                 {% endfor %}
                 <!-- upload image input -->
