--- a/templates/components/modals/add_category_modal.html
+++ b/templates/components/modals/add_category_modal.html
@@ -31,6 +31,13 @@
                         <input type="file" class="form-control" id="category-icon" name="icon" placeholder="bi bi-code-slash">
                     </div>
 
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="category-is-active">
+                        <label class="form-check-label" for="category-is-active">
+                            Visible to Users
+                        </label>
+                    </div>
+
                     <div class="d-flex justify-content-end gap-2">
                         <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button class="btn btn-secondary savecategory">Save category</button>
