--- a/templates/components/modals/add_service_modal.html
+++ b/templates/components/modals/add_service_modal.html
@@ -32,11 +32,20 @@
                         <input type="text" class="form-control" id="service-icon" name="icon"
                             placeholder="bi bi-code-slash">
                     </div>
+                    <!-- add radio button for is_active -->
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="service-is-active">
+                        <label class="form-check-label" for="service-is-active">
+                            Visible to Users
+                        </label>
+                    </div>
 
                     <div class="d-flex justify-content-end gap-2">
                         <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button class="btn btn-secondary saveservice">Save Service</button>
                     </div>
+
 
                 </div>
             </div>
